[package]
name = "venom-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-primitives.workspace = true
bumpalo = { workspace = true, features=["collections"] }
itertools.workspace = true

[lints]
workspace = true
